After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697649 - The toggle button Dim "Screen when Inactive" doesn't work
The toggle button Dim "Screen when Inactive" doesn't work
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
3.10
Depends on:
Blocks:
 
 
Reported: 2013-04-09 15:42 UTC by Jean-Benoit MARTIN
Modified: 2013-05-13 07:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Enable Dim sceen (1.03 KB, patch)
2013-04-26 14:56 UTC, Jean-Benoit MARTIN
committed Details | Review

Description Jean-Benoit MARTIN 2013-04-09 15:42:09 UTC
On battery mode

the toggle button of "Dim Screen when Inactive" have any effect

The "Dim Screen when Inactive" is enable or disable if the timer of Blank screen has changed
Comment 1 Jean-Benoit MARTIN 2013-04-26 14:56:06 UTC
Created attachment 242578 [details] [review]
Enable Dim sceen
Comment 2 Bastien Nocera 2013-04-26 15:02:20 UTC
Review of attachment 242578 [details] [review]:

> power: Enable toggle button "Screen when inactive"
Make "Dim Screen" switch work

> Dim Screen was enable only if the timer of blank screen has changed
Dim screen was only enabled if the timer of "blank screen" had been changed as well.

Looks good to commit to gnome-3-8 and master
Comment 3 Bastien Nocera 2013-05-13 07:18:53 UTC
Committed to gnome-3-8 and master with some changes to the commit message. Thanks!