power: Make "Screen when inactive" button work

"Dim screen" only got enabled if the "blank screen" timeout got changed,
because of a missing check for the "idle-dim" settings key.

https://bugzilla.gnome.org/show_bug.cgi?id=697649